<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.belatrixsf.mobiledevfundamentals17.MenuActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="exercise1ButtonClicked"
        android:text="@string/exercise_1_and_2"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="exercise5ButtonClicked"
        android:text="@string/exercise_5"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="exercise6ButtonClicked"
        android:text="@string/timer"
        />

</LinearLayout>
